feat: Spring Boot yapılandırmaları güncellendi