@@ -20,10 +20,11 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
+import java.util.List; // List importu eklendi
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true)
+@EnableMethodSecurity(prePostEnabled = true) // Metot seviyesi güvenlik için (örn: @PreAuthorize)
 public class SecurityConfig {
 
     private final UserDetailsServiceImpl userDetailsService;
@@ -51,11 +52,12 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        // Frontend uygulamanızın çalıştığı adresi buraya ekleyin
+        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // Tek Origin için List.of daha uygun
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        // configuration.setAllowCredentials(true); // Eğer cookie tabanlı bir şey yapmıyorsanız genellikle gerekmez
-
+        configuration.setAllowedHeaders(Arrays.asList("*")); // Veya daha spesifik header'lar: "Authorization", "Content-Type"
+        // configuration.setAllowCredentials(true); // Eğer frontend'den cookie tabanlı kimlik bilgisi gönderiyorsanız
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -64,19 +66,60 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
-                .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/hastalar/register").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/personeller").permitAll()
-                        .requestMatchers("/api/roller/**").permitAll()
-                        .requestMatchers("/api/departmanlar/**").permitAll()
-                        .requestMatchers("/api/branslar/**").permitAll()
-                        .anyRequest().authenticated()
-                );
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(csrf -> csrf.disable()) // API olduğu için ve JWT kullandığımız için CSRF genellikle devre dışı bırakılır
+            .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Oturum yönetimi STATELESS
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/api/auth/**").permitAll() // Giriş ve kayıt endpoint'leri
+                .requestMatchers("/api/hastalar/register").permitAll() // Hasta kayıt endpoint'i
+
+                // Personel endpoint'leri
+                .requestMatchers(HttpMethod.POST, "/api/personeller").hasRole("ADMIN") // Yeni personel oluşturma sadece ADMIN
+                .requestMatchers(HttpMethod.GET, "/api/personeller").hasAnyRole("ADMIN", "HASTA", "DOKTOR") // Tüm personelleri listeleme (dikkatli kullanılmalı)
+                .requestMatchers(HttpMethod.GET, "/api/personeller/doktorlar").hasAnyRole("ADMIN", "HASTA", "DOKTOR") // Doktorları listeleme
+                .requestMatchers(HttpMethod.GET, "/api/personeller/{id}").hasRole("ADMIN") // ID ile personel getirme sadece ADMIN
+                .requestMatchers(HttpMethod.PUT, "/api/personeller/{id}").hasRole("ADMIN") // Personel güncelleme sadece ADMIN
+                .requestMatchers(HttpMethod.DELETE, "/api/personeller/{id}").hasRole("ADMIN") // Personel silme sadece ADMIN
+                
+                // Temel Veri Endpoint'leri (Genellikle listeleme herkes tarafından yapılabilir, CUD işlemleri Admin'e özel)
+                .requestMatchers(HttpMethod.GET, "/api/departmanlar/**").permitAll() // Departmanları herkes listeleyebilir
+                .requestMatchers(HttpMethod.POST, "/api/departmanlar").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/departmanlar/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/departmanlar/**").hasRole("ADMIN")
+
+                .requestMatchers(HttpMethod.GET, "/api/branslar/**").permitAll() // Branşları herkes listeleyebilir
+                .requestMatchers(HttpMethod.POST, "/api/branslar").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/branslar/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/branslar/**").hasRole("ADMIN")
+
+                .requestMatchers(HttpMethod.GET, "/api/roller/**").permitAll() // Rolleri herkes listeleyebilir (gerekirse kısıtlanabilir)
+                .requestMatchers(HttpMethod.POST, "/api/roller").hasRole("ADMIN") // Yeni rol ekleme sadece ADMIN
+                
+                // Diğer endpoint'ler için @PreAuthorize kullanılacak veya buraya eklenecek
+                // Örnek: İlaçları listeleme herkes tarafından, ekleme/güncelleme/silme ADMIN
+                .requestMatchers(HttpMethod.GET, "/api/ilaclar/**").permitAll() 
+                .requestMatchers(HttpMethod.POST, "/api/ilaclar").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/ilaclar/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/ilaclar/**").hasRole("ADMIN")
+                
+                // Kat, Oda, Yatak listeleme (Authenticated kullanıcılar)
+                .requestMatchers(HttpMethod.GET, "/api/katlar/**").authenticated()
+                .requestMatchers(HttpMethod.GET, "/api/odalar/**").authenticated()
+                .requestMatchers(HttpMethod.GET, "/api/yataklar/**").authenticated()
+                // Kat, Oda, Yatak CUD işlemleri (Admin)
+                .requestMatchers(HttpMethod.POST, "/api/katlar", "/api/odalar", "/api/yataklar").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/katlar/**", "/api/odalar/**", "/api/yataklar/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/katlar/**", "/api/odalar/**", "/api/yataklar/**").hasRole("ADMIN")
+
+                // Randevu endpoint'leri (Detaylı yetkilendirme Controller'da @PreAuthorize ile yapılıyor)
+                // Ancak genel bir kural eklenebilir. Örneğin, randevu oluşturma HASTA, DOKTOR, ADMIN tarafından yapılabilir.
+                .requestMatchers(HttpMethod.POST, "/api/randevular").hasAnyRole("HASTA", "DOKTOR", "ADMIN")
+                .requestMatchers("/api/randevular/**").authenticated() // Diğer randevu işlemleri için giriş yapmış olmak yeterli (detaylı kontrol @PreAuthorize'da)
+
+                // Diğer tüm istekler için kimlik doğrulaması gereklidir
+                .anyRequest().authenticated() 
+            );
 
         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
